# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.50 2004/05/18 02:09:57 zhen Exp $

  17 May 2004; John Davis <zhen@gentoo.org>
  livecd/runscript/default-runscript.sh, livecd/runscript/x86-archscript.sh,
  livecd/runscript-support/kmerge.sh,
  livecd/runscript-support/livecdfs-update.sh,
  modules/livecd_stage2_target.py:
  fixes for the genkernel arg handling - we can now do it on a per-kernel basis.
  we also now have basic motd copying support for more branded livecds

  16 May 2004; John Davis <zhen@gentoo.org>
  livecd/runscript-support/kmerge.sh, modules/livecd_stage2_target.py:
  added a feature to the livecd-stage2 specfile called "livecd/genkernel_args"
  for passing args to genkernel. gmsoft@gentoo.org requested this one.

  16 May 2004; John Davis <zhen@gentoo.org> catalyst,
  modules/catalyst_support.py, modules/embedded_target.py,
  modules/generic_stage_target.py, modules/generic_target.py,
  modules/grp_target.py, modules/livecd_stage1_target.py,
  modules/livecd_stage2_target.py, modules/stage1_target.py,
  modules/stage2_target.py, modules/stage3_target.py,
  modules/tinderbox_target.py, targets/stage1/stage1-preclean2-chroot.sh:
  finally parsed out targets.py. fixed gcc-config typo in stage1 the stage1 that
  caused gcc profile problems.

  12 May 2004; John Davis <zhen@gentoo.org>
  livecd/runscript/default-runscript.sh, livecd/runscript-support/kmerge.sh,
  livecd/runscript-support/livecdfs-update.sh,
  livecd/runscript-support/post-kmerge.sh,
  livecd/runscript-support/pre-kmerge.sh, modules/catalyst_support.py,
  modules/targets.py:
  fixed default-runscript.sh so that it is easier to read (no more chroot >> EOF
  silliness). Most notably, I have taken advantage of the update-modules
  --assume-kernel fix from agriffis so that we can actually use 3rd party