@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript/Attic/default-runscript.sh,v 1.10 2004/05/18 02:09:57 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript/Attic/default-runscript.sh,v 1.11 2004/05/19 12:40:03 zhen Exp $
 
 #return codes to be used by archscript
 die() {
@@ -172,7 +172,6 @@ case $1 in
 		;;
 
 	iso)
-		mkdir ${clst_cdroot_path}/docs
 		;;
 esac
 exit 0 
