@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript/Attic/x86-archscript.sh,v 1.6 2004/05/18 02:09:57 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript/Attic/x86-archscript.sh,v 1.7 2004/05/19 12:40:03 zhen Exp $
 
 case $1 in
 	kernel)
@@ -60,7 +60,7 @@ case $1 in
 			echo >> $icfg
 			echo "label $x" >> $icfg
 			echo "	kernel $x" >> $icfg
-			echo "	append initrd=$x.igz root=/dev/ram0 init=/linuxrc acpi=off ${cmdline_opts} ${custom_kopts} cdroot vga=0x317 splash=silent" >> $icfg
+			echo "	append initrd=$x.igz root=/dev/ram0 init=/linuxrc acpi=off ${cmdline_opts} ${custom_kopts} cdroot vga=791 splash=silent" >> $icfg
 			echo >> $icfg
 			echo "   $x" >> $kmsg
 			echo "label $x-nofb" >> $icfg
