@@ -1,6 +1,13 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.50 2004/05/18 02:09:57 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.51 2004/05/19 12:40:03 zhen Exp $
+
+  19 May 2004; John Davis <zhen@gentoo.org>
+  livecd/runscript/default-runscript.sh, modules/livecd_stage2_target.py,
+  livecd/runscript/x86-archscript.sh:
+  added support for livecd/overlay, changed vga=0x317 to vga=791
+  in the x86 archscript as it is a more standard setting and should
+  work on more hardware
 
   17 May 2004; John Davis <zhen@gentoo.org>
   livecd/runscript/default-runscript.sh, livecd/runscript/x86-archscript.sh,
